<resources>
    <string name="app_name">QRCode</string>
    <string name="app_id">jfk92DJkdK902D</string>
    <string name="text_error">Error. Please try again</string>
    <string name="text_success">Success</string>
    <string name="text_label_nodata">No Data</string>

    <!-- STARTED -->
    <string name="text_slider_1">Welcome to\n\nQRCode</string>
    <string name="text_slider_2">Making your transfer easier</string>
    <string name="text_slider_3">Let\'s Get Started!</string>

    <!-- REGISTER -->
    <string name="text_register_base_phone_number">+62</string>
    <string name="text_register_phone_invalid">Please input valid phone number</string>
    <string name="text_register_pin_invalid">Please input your pin</string>
    <string name="text_register_pin_confirmation_invalid">Your confirmation pin is not match</string>
    <string name="text_verification_done">Verification Done!</string>
    <string name="btn_delete">Delete</string>
    <string name="text_title_step_1">Step 1 : Register your phone number</string>
    <string name="text_title_step_2">Step 2 : Input your pin</string>
    <string name="text_title_step_3">Step 3 : Verification your pin</string>
    <string name="text_title_step_4">Step 4 : Done</string>

    <!-- PIN -->
    <string name="text_input_pin">Please input your security pin</string>
    <string name="text_incorrect_pin">Incorrect pin</string>
    <string name="text_button_change_account">Change Account</string>

    <!-- HOME -->
    <string name="text_home_main_menu_scan">Scan</string>
    <string name="text_home_main_menu_show_qr">Show QRCode</string>
    <string name="text_home_main_menu_top_up">Top Up</string>
    <string name="text_home_history">History</string>
    <string name="text_label_balance">Balance :\u0020</string>
    <string name="text_history_transfer_in">You received %s from %s</string>
    <string name="text_history_transfer_out">You transfer %s to %s </string>
    <string name="text_history_top_up">Your top-up : %s is already added to your account</string>

    <!-- SHOW QRCODE DIALOG -->
    <string name="text_title_show_qrcode">Scan me</string>
    <string name="text_phone_show_qrcode">Phone Number</string>

    <!-- SCAN -->
    <string name="text_barcode_invalid">You can\'t scan your own QR code</string>

    <!-- TRANSFER -->
    <string name="text_toolbar_transfer">Transfer</string>
    <string name="text_transfer_to">Transfer to</string>
    <string name="text_transfer_input_label">Rp.</string>
    <string name="text_label_your_current_balance">Your current balance :\u0020</string>
    <string name="text_not_enough_balance">Your balance is not enough</string>

    <!-- TOP UP -->
    <string name="text_button_save">Save</string>

    <!-- DATETIME -->
    <string name="time_format">%02d:%02d</string>
    <string name="date_format">%d-%02d-%02d</string>
    <string name="date_view_format">%02d %s %d</string>
</resources>
