<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="phone"
            type="String"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        >

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/common_20dp"
            android:layout_marginBottom="@dimen/common_20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_show_qrcode"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_20sp"
                />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ll_qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_header"
            android:layout_centerHorizontal="true"
            >

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_error"
                android:textColor="@color/colorRed"
                android:layout_centerInParent="true"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_scan"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_qrcode"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/common_20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_phone_show_qrcode"
                android:textColor="@color/colorBrown"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{phone}"
                tools:text="+6287897892374"
                android:layout_margin="@dimen/common_20dp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_18sp"
                />

        </LinearLayout>

    </RelativeLayout>

</layout>