<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="balance"
            type="String"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_20dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        >

        <!-- TITLE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_home_main_menu_top_up"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_20sp"
                />

        </LinearLayout>

        <!-- CONTENT -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            android:layout_margin="@dimen/common_12dp"
            app:cardElevation="@dimen/common_12dp"
            app:cardCornerRadius="@dimen/common_4dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/common_20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_transfer_input_label"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_20sp"
                    android:layout_marginRight="@dimen/common_10dp"
                    />

                <EditText
                    android:id="@+id/txtPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="7"
                    android:inputType="number"
                    android:text="@={balance}"
                    android:backgroundTint="@color/colorBackground"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@color/colorBackground"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- BUTTON -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_save"
                android:background="@android:color/transparent"
                android:textColor="@color/colorWhite"
                />

        </LinearLayout>

    </LinearLayout>

</layout>