<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="balance"
            type="String"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_150dp"
            android:padding="@dimen/common_20dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:background="@drawable/background"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/text_20sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/common_10dp"
                />

            <View
                style="@style/VerticalDivider"
                android:background="@color/colorWhite"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_12dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_balance"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_18sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{balance}"
                    tools:text="20000"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_18sp"
                    />

            </LinearLayout>

        </LinearLayout>


        <!-- MAIN MENU -->
        <android.support.v7.widget.CardView
            android:id="@+id/cv_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/common_10dp"
            app:cardElevation="@dimen/common_4dp"
            android:layout_marginTop="@dimen/common_100dp"
            android:layout_marginLeft="@dimen/common_30dp"
            android:layout_marginRight="@dimen/common_30dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/common_20dp"
                >

                <LinearLayout
                    android:id="@+id/menu_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="@dimen/common_40dp"
                        android:layout_height="@dimen/common_40dp"
                        android:src="@drawable/ic_scan"
                        android:layout_marginBottom="@dimen/common_4dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_home_main_menu_scan"
                        android:textSize="@dimen/text_12sp"
                        android:textColor="@color/colorBlack"
                        />

                </LinearLayout>


                <View
                    style="@style/HorizontalDivider"
                    android:background="@color/colorBrown"
                    />

                <LinearLayout
                    android:id="@+id/menu_show_qr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="@dimen/common_40dp"
                        android:layout_height="@dimen/common_40dp"
                        android:src="@drawable/ic_barcode"
                        android:layout_marginBottom="@dimen/common_4dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_home_main_menu_show_qr"
                        android:textSize="@dimen/text_12sp"
                        android:textColor="@color/colorBlack"
                        />

                </LinearLayout>

                <View
                    style="@style/HorizontalDivider"
                    android:background="@color/colorBrown"
                    />

                <LinearLayout
                    android:id="@+id/menu_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="@dimen/common_40dp"
                        android:layout_height="@dimen/common_40dp"
                        android:src="@drawable/ic_id"
                        android:layout_marginBottom="@dimen/common_4dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_home_main_menu_id"
                        android:textSize="@dimen/text_12sp"
                        android:textColor="@color/colorBlack"
                        />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- HISTORY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cv_menu"
            android:padding="@dimen/common_20dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_home_history"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_20sp"
                />

        </LinearLayout>

    </RelativeLayout>

</layout>