<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="phone"
            type="String"/>

        <variable
            name="price"
            type="String"/>

        <variable
            name="balance"
            type="String"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- TOOLBAR -->
        <RelativeLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:padding="@dimen/common_16dp"
            >

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_toolbar_transfer"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_18sp"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

        <!-- INFORMATION -->
        <RelativeLayout
            android:id="@+id/layout_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_220dp"
            android:layout_below="@id/layout_toolbar"
            android:gravity="center"
            android:background="@drawable/background"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_transfer_to"
                    android:textColor="@color/colorBrown"
                    android:textSize="@dimen/text_18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_24dp"
                    android:text="@{phone}"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_25sp"
                    tools:text="+627897006681" />

            </LinearLayout>


        </RelativeLayout>

        <!-- INPUT -->
        <android.support.v7.widget.CardView
            android:id="@+id/cv_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/common_10dp"
            app:cardElevation="@dimen/common_4dp"
            android:layout_marginTop="@dimen/common_220dp"
            android:layout_marginLeft="@dimen/common_30dp"
            android:layout_marginRight="@dimen/common_30dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/common_20dp"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_transfer_input_label"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_20sp"
                        android:layout_marginRight="@dimen/common_10dp"
                        />

                    <EditText
                        android:id="@+id/txtPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="7"
                        android:inputType="number"
                        android:text="@={price}"
                        android:backgroundTint="@color/colorBackground"
                        android:cursorVisible="true"
                        android:textCursorDrawable="@color/colorBackground"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_label_your_current_balance"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{balance}"
                        />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- BUTTON -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background"
            >

            <Button
                android:id="@+id/btnTransfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_toolbar_transfer"
                android:textColor="@color/colorWhite"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

    </RelativeLayout>

</layout>